# agentic-rag-system

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
core/: agent.py  prompts.py  tools.py
static/css/: main.css
templates/: chat.html  layout.html
